server/compilers/goLiteJS/src/test/ml2/valid/valreturn6.go
package main


func main() bool{
	for {
		break;
		return true;
	}
	switch a:=3;a {
		case 1:
			break;
			return true;
		case 2:
			break;
			return true;
		case 3:
			break;
			return true;
	
		default:
			return true
	}
}
