server/compilers/goLiteJS/src/test/ml2/invalid/shortdecl1.go
package main
//Error: Short declaration repeated variable
func main() {
   a, c, a := 1,2,3;

}
